Remove @RequireDidOpen annotation
Signed-off-by: azerr <azerr@redhat.com>